k8s/db_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: centraverse-sql
  namespace: centraverse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: centraverse-db
  template:
    metadata:
      labels:
        app: centraverse-db
    spec:
      containers:
        - name: centraverse-db
          image: postgres:latest
          imagePullPolicy: Always
