k8s/db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: centraverse-db-service
  namespace: centraverse
spec:
  selector:
    app: centraverse-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
