k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: centraverse-ingress
  namespace: centraverse
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '4'
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 1024m
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: GET
spec:
  rules:
    - host: centraverse.k8s.inpt.fr
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: centraverse-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: centraverse-service
                port:
                  number: 80
  tls:
    - hosts:
        - centraverse.k8s.inpt.fr
      secretName: centraverse-tls
